@@ -1,3 +1,9 @@
+2005-09-18  Kazuhiko  <kazuhiko@fdiary.net>
+	* style/default/html_formatter.rb (replace_auto_link): do nothing
+	if @auto_links is empty.
+	* style/default/hikidoc.rb: sync with hikidoc rev.25.
+	  minimum match in parse_modifier.
+
 2005-09-15  Kazuhiko  <kazuhiko@fdiary.net>
 	* misc/plugin/amazon.rb (getAmazon): allow hankaku colon in a
 	regexp of an item_name.
